--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: arqas
 Type: Package
 Title: Application in R for Queueing Analysis and Simulation
-Version: 1.1
-Date: 2015-06-15
+Version: 1.3
+Date: 2015-09-18
 Author: Borja Varela
 Maintainer: Borja Varela <borja.varela.brea@gmail.com>
 Depends: R (>= 1.8.0), distr, ggplot2
-Imports: methods, reshape, iterators, doParallel, foreach,
-        fitdistrplus, gridExtra
+Imports: graphics, stats, utils, methods, reshape, iterators,
+        doParallel, foreach, fitdistrplus, grid, gridExtra
 Description: Provides functions to compute the main characteristics of the
     following queueing models: M/M/1, M/M/s, M/M/1/k, M/M/s/k, M/M/1/Inf/H, M/
     M/s/Inf/H, M/M/s/Inf/H with Y replacements, M/M/Inf, Open Jackson Networks
@@ -19,6 +19,6 @@ Description: Provides functions to compute the main characteristics of the
 License: GPL (>= 2)
 LazyData: yes
 NeedsCompilation: no
-Packaged: 2015-06-14 23:03:04 UTC; Vishkey
+Packaged: 2015-09-20 13:37:18 UTC; Vishkey
 Repository: CRAN
-Date/Publication: 2015-06-15 07:59:03
+Date/Publication: 2015-09-20 16:01:54
